Fix build warning : -Wunused-parameter. https://bugs.webkit.org/show_bug.cgi?id=98583

Patch by Byungwoo Lee <bw80.lee@samsung.com> on 2012-10-06
Reviewed by Kentaro Hara.

Use ASSERT_UNUSED() macro to remove build warning.

* plugins/PluginStream.cpp:
(WebCore::PluginStream::delayDeliveryTimerFired):
(WebCore::PluginStream::didReceiveResponse):
(WebCore::PluginStream::didReceiveData):
(WebCore::PluginStream::didFail):
(WebCore::PluginStream::didFinishLoading):
* plugins/PluginView.cpp:
(WebCore::PluginView::requestTimerFired):
(WebCore::PluginView::invalidateTimerFired):

Canonical link: https://commits.webkit.org/116572@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130582 268f45cc-cd09-0410-ab3c-d52691b4dbfc